Update battery sensors for 0.41 zwave entities

--- a/sensors/batteries.yaml
+++ b/sensors/batteries.yaml
@@ -2,120 +2,120 @@
   sensors:
     main_heating_thermostat_battery:
       value_template: >
-        {% if states.sensor.horstmann_scsc17_thermostat_temperature_35_1 %}
-          {{ states.sensor.horstmann_scsc17_thermostat_temperature_35_1.attributes.battery_level }}
+        {% if states.zwave.horstmann_scsc17_thermostat_35 %}
+          {{ states.zwave.horstmann_scsc17_thermostat_35.attributes.battery_level }}
         {% else %}
           unknown
         {% endif %}
       unit_of_measurement: '%'
     annex_heating_thermostat_battery:
       value_template: >
-        {% if states.sensor.horstmann_scsc17_thermostat_temperature_50_1 %}
-          {{ states.sensor.horstmann_scsc17_thermostat_temperature_50_1.attributes.battery_level }}
+        {% if states.zwave.horstmann_scsc17_thermostat_50 %}
+          {{ states.zwave.horstmann_scsc17_thermostat_50.attributes.battery_level }}
         {% else %}
           unknown
         {% endif %}
       unit_of_measurement: '%'
     hall_multisensor_battery:
       value_template: >
-        {% if states.sensor.aeotec_dsb05_multisensor_temperature_3_1 %}
-          {{ states.sensor.aeotec_dsb05_multisensor_temperature_3_1.attributes.battery_level }}
+        {% if states.zwave.aeotec_dsb05_multisensor_3 %}
+          {{ states.zwave.aeotec_dsb05_multisensor_3.attributes.battery_level }}
         {% else %}
           unknown
         {% endif %}
       unit_of_measurement: '%'
     hall_east_battery:
       value_template: >
-        {% if states.sensor.hall_east_temperature_24_1 %}
-          {{ states.sensor.hall_east_temperature_24_1.attributes.battery_level }}
+        {% if states.zwave.hall_east_24 %}
+          {{ states.zwave.hall_east_24.attributes.battery_level }}
         {% else %}
           unknown
         {% endif %}
       unit_of_measurement: '%'
     hall_west_battery:
       value_template: >
-        {% if states.sensor.hall_west_temperature_13_1 %}
-          {{ states.sensor.hall_west_temperature_13_1.attributes.battery_level }}
+        {% if states.zwave.hall_west_13 %}
+          {{ states.zwave.hall_west_13.attributes.battery_level }}
         {% else %}
           unknown
         {% endif %}
       unit_of_measurement: '%'
     annex_hall_battery:
       value_template: >
-        {% if states.sensor.annex_hall_temperature_43_1 %}
-          {{ states.sensor.annex_hall_temperature_43_1.attributes.battery_level }}
+        {% if states.zwave.annex_hall_43 %}
+          {{ states.zwave.annex_hall_43.attributes.battery_level }}
         {% else %}
           unknown
         {% endif %}
       unit_of_measurement: '%'
     ballroom_east_battery:
       value_template: >
-        {% if states.sensor.ballroom_east_temperature_33_1 %}
-          {{ states.sensor.ballroom_east_temperature_33_1.attributes.battery_level }}
+        {% if states.zwave.ballroom_east_33 %}
+          {{ states.zwave.ballroom_east_33.attributes.battery_level }}
         {% else %}
           unknown
         {% endif %}
       unit_of_measurement: '%'
     bedroom_mark_battery:
       value_template: >
-        {% if states.sensor.bedroom_mark_temperature_29_1 %}
-          {{ states.sensor.bedroom_mark_temperature_29_1.attributes.battery_level }}
+        {% if states.zwave.bedroom_mark_29 %}
+          {{ states.zwave.bedroom_mark_29.attributes.battery_level }}
         {% else %}
           unknown
         {% endif %}
       unit_of_measurement: '%'
     kitchen_battery:
       value_template: >
-        {% if states.sensor.kitchen_temperature_34_1 %}
-          {{ states.sensor.kitchen_temperature_34_1.attributes.battery_level }}
+        {% if states.zwave.kitchen_34 %}
+          {{ states.zwave.kitchen_34.attributes.battery_level }}
         {% else %}
           unknown
         {% endif %}
       unit_of_measurement: '%'
     library_battery:
       value_template: >
-        {% if states.sensor.library_temperature_25_1 %}
-          {{ states.sensor.library_temperature_25_1.attributes.battery_level }}
+        {% if states.zwave.library_25 %}
+          {{ states.zwave.library_25.attributes.battery_level }}
         {% else %}
           unknown
         {% endif %}
       unit_of_measurement: '%'
     lounge_east_battery:
       value_template: >
-        {% if states.sensor.lounge_east_temperature_30_1 %}
-          {{ states.sensor.lounge_east_temperature_30_1.attributes.battery_level }}
+        {% if states.zwave.lounge_east_30 %}
+          {{ states.zwave.lounge_east_30.attributes.battery_level }}
         {% else %}
           unknown
         {% endif %}
       unit_of_measurement: '%'
     study_east_battery:
       value_template: >
-        {% if states.sensor.study_east_temperature_14_1 %}
-          {{ states.sensor.study_east_temperature_14_1.attributes.battery_level }}
+        {% if states.zwave.study_east_14 %}
+          {{ states.zwave.study_east_14.attributes.battery_level }}
         {% else %}
           unknown
         {% endif %}
       unit_of_measurement: '%'
     study_west_battery:
       value_template: >
-        {% if states.sensor.study_west_temperature_15_1 %}
-          {{ states.sensor.study_west_temperature_15_1.attributes.battery_level}}
+        {% if states.zwave.study_west_15 %}
+          {{ states.zwave.study_west_15.attributes.battery_level}}
         {%  else %}
           unknown
         {%  endif %}
       unit_of_measurement: '%'
     bedroom_jerome_battery:
       value_template: >
-        {% if states.sensor.bedroom_jerome_temperature_44_1 %}
-          {{ states.sensor.bedroom_jerome_temperature_44_1.attributes.battery_level }}
+        {% if states.zwave.bedroom_jerome_44 %}
+          {{ states.zwave.bedroom_jerome_44.attributes.battery_level }}
         {% else %}
           unknown
         {% endif %}
       unit_of_measurement: '%'
     bedroom_ros_battery:
       value_template: >
-        {% if states.sensor.bedroom_ros_temperature_55_1 %}
-          {{ states.sensor.bedroom_ros_temperature_55_1.attributes.battery_level }}
+        {% if states.zwave.bedroom_ros_55 %}
+          {{ states.zwave.bedroom_ros_55.attributes.battery_level }}
         {% else %}
           unknown
         {% endif %}
