--- a/groups.yaml
+++ b/groups.yaml
@@ -9,13 +9,18 @@ study:
   icon: mdi:printer
   view: true
   entities:
-  - group.study_scenes
-  - media_player.study
-  - group.study_lights
-  - group.study_heating
-  - group.study_appliances
   - sensor.study_east_temperature_14_1
   - sensor.study_west_temperature_15_1
+  - group.study_compact_ui
+  - group.study_appliances
+  - media_player.study
+study_compact_ui:
+  name: Study
+  view: false
+  entities:
+  - input_select.study_select
+  - climate.study_east_thermostat_14_1
+  - climate.study_west_thermostat_15_1
 study_scenes:
   name: Study
   view: false
@@ -55,11 +60,16 @@ kitchen:
   view: true
   icon: mdi:stove
   entities:
-  - media_player.kitchen
-  - group.kitchen_lights
-  - group.kitchen_heating
-  - group.kitchen_scenes
   - sensor.kitchen_temperature_34_1
+  - group.kitchen_compact_ui
+  - media_player.kitchen
+kitchen_compact_ui:
+  name: Kitchen
+  view: false
+  icon: mdi:stove
+  entities:
+  - input_select.kitchen_select
+  - climate.kitchen_thermostat_34_1
 kitchen_scenes:
   name: Kitchen
   view: false
@@ -89,19 +99,27 @@ hall:
   view: true
   icon: mdi:fullscreen-exit
   entities:
-  - group.hall_lights
-  - group.hall_heating
-  - group.hall_scenes
-  - group.main_heating
-  - group.annex_heating
-  - group.hottub
+  - binary_sensor.aeotec_dsb05_multisensor_sensor_3_0
   - sensor.aeotec_dsb05_multisensor_luminance_3_3
   - sensor.aeotec_dsb05_multisensor_relative_humidity_3_5
   - sensor.aeotec_dsb05_multisensor_temperature_3_1
   - sensor.hall_west_temperature_13_1
   - sensor.hall_east_temperature_24_1
   - sensor.annex_hall_temperature_43_1
-  - binary_sensor.aeotec_dsb05_multisensor_sensor_3_0
+  #
+  - group.hall_compact_ui
+  - group.hall_lights
+  - group.main_heating
+  - group.annex_heating
+  - group.hottub
+hall_compact_ui:
+  name: Hall
+  view: false
+  icon: mdi:fullscreen-exit
+  entities:
+  - climate.hall_west_thermostat_13_1
+  - climate.hall_east_thermostat_24_1
+  - climate.annex_hall_thermostat_43_1
 hall_scenes:
   name: Hall Scenes
   view: false
@@ -135,11 +153,17 @@ lounge:
   view: true
   icon: mdi:sofa
   entities:
-  - media_player.lounge
-  - group.lounge_lights
-  - group.lounge_heating
-  - group.lounge_scenes
   - sensor.lounge_east_temperature_30_1
+  - group.lounge_compact_ui
+  - media_player.lounge
+lounge_compact_ui:
+  name: Lounge
+  view: false
+  icon: mdi:sofa
+  entities:
+  - input_select.lounge_select
+  - climate.lounge_east_thermostat_30_1
+  - group.lounge_lights
 lounge_scenes:
   name: Lounge
   view: false
@@ -173,11 +197,16 @@ library:
   view: true
   icon: mdi:library
   entities:
-  - media_player.library
-  - group.library_lights
-  - group.library_heating
-  - group.library_scenes
   - sensor.library_temperature_25_1
+  - group.library_compact_ui
+  - media_player.library
+library_compact_ui:
+  name: Library
+  view: false
+  icon: mdi:library
+  entities:
+  - input_select.library_select
+  - climate.library_thermostat_25_1
 library_scenes:
   name: Library
   view: false
@@ -207,22 +236,27 @@ ballroom:
   view: true
   icon: mdi:projector
   entities:
+  - sensor.ballroom_east_temperature_33_1
+  - group.ballroom_compact_ui
   - media_player.ballroom
   - media_player.ballroom_amplifier
-  - group.ballroom_lights
-  - group.ballroom_heating
-  - group.ballroom_scenes
-  - sensor.ballroom_east_temperature_33_1
+ballroom_compact_ui:
+  name: Ballroom
+  view: false
+  icon: mdi:projector
+  entities:
+  - input_select.ballroom_select
+  - climate.ballroom_east_thermostat_33_1
 ballroom_scenes:
   name: Ballroom
   view: false
   entities:
   - input_select.ballroom_select
 ballroom_heating:
-  entities:
-  - climate.ballroom_east_thermostat_33_1
   name: Ballroom Heating
   view: false
+  entities:
+  - climate.ballroom_east_thermostat_33_1
 ballroom_setpoints:
   name: Ballroom Setpoints
   view: false
