Add private repo for dynamic files

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "www/wb-icons"]
 	path = www/wb-icons
 	url = hastur:/home/gnome/repos/wb-icons.git
+[submodule "private"]
+	path = private
+	url = ./private
