--- a/switches/mqtt_switches.yaml
+++ b/switches/mqtt_switches.yaml
@@ -58,6 +58,12 @@
   payload_on: 'ON'
   platform: mqtt
   retain: true
+- command_topic: ha/js-bedroom/demand/command
+  name: "J's Bedroom Demand"
+  payload_off: 'OFF'
+  payload_on: 'ON'
+  platform: mqtt
+  retain: true
 - name: "Ros's Bedroom Demand"
   command_topic: ha/bedroom-ros/demand/command
   payload_off: 'OFF'
