tado: use js_bedroom trv away mode for Jerome presence

--- a/people/jerome.yaml
+++ b/people/jerome.yaml
@@ -1,4 +1,6 @@
 name: "Jerome"
+control: hidden
 entities:
 - device_tracker.jerome_phone
 - device_tracker.jerome_android
+- sensor.js_bedroom_present
