--- a/groups.yaml
+++ b/groups.yaml
@@ -633,6 +633,18 @@ batteries:
   - sensor.bedroom_jerome_battery
   - sensor.bedroom_ros_battery
 
+dash_buttons:
+  name: Amazon Dash Buttons
+  view: false
+  entities:
+  - switch.listerine
+  - switch.ariel
+  - switch.optimum_nutrition
+  - switch.philips_sonicare
+  - switch.huggies
+  - switch.catsan
+  - switch.right_guard
+
 heating_valves:
   name: Heating Demand
   view: false
