dash: tweaks. Add to settings tab. Remove 'retain: true'

--- a/groups.yaml
+++ b/groups.yaml
@@ -517,6 +517,7 @@ settings:
   - group.user_automations
   - group.rfx_switches
   - group.rfx_lights
+  - group.dash_buttons
 
 #
 # Functional Groups
