--- a/switches/dash-buttons.yaml
+++ b/switches/dash-buttons.yaml
@@ -1,42 +1,9 @@
-- name: Listerine
-  platform: mqtt
-  command_topic: ha/dash/listerine
-  state_topic: ha/dash/listerine
-  payload_on: 'active'
-  payload_off: 'inactive'
-  retain: true
-
-- name: Ariel
-  platform: mqtt
-  command_topic: ha/dash/ariel
-  state_topic: ha/dash/ariel
-  payload_on: 'active'
-  payload_off: 'inactive'
-  retain: true
-
-- name: Optimum Nutrition
-  platform: mqtt
-  command_topic: ha/dash/on
-  state_topic: ha/dash/on
-  payload_on: 'active'
-  payload_off: 'inactive'
-  retain: true
-
-- name: Philips Sonicare
-  platform: mqtt
-  command_topic: ha/dash/philips-sonicare
-  state_topic: ha/dash/philips-sonicare
-  payload_on: 'active'
-  payload_off: 'inactive'
-  retain: true
-
 - name: Huggies
   platform: mqtt
   command_topic: ha/dash/huggies
   state_topic: ha/dash/huggies
   payload_on: 'active'
   payload_off: 'inactive'
-  retain: true
 
 - name: Catsan
   platform: mqtt
@@ -44,7 +11,36 @@
   state_topic: ha/dash/catsan
   payload_on: 'active'
   payload_off: 'inactive'
-  retain: true
+
+# Unassigned
+
+- name: Listerine
+  platform: mqtt
+  command_topic: ha/dash/listerine
+  state_topic: ha/dash/listerine
+  payload_on: 'active'
+  payload_off: 'inactive'
+
+- name: Ariel
+  platform: mqtt
+  command_topic: ha/dash/ariel
+  state_topic: ha/dash/ariel
+  payload_on: 'active'
+  payload_off: 'inactive'
+
+- name: Optimum Nutrition
+  platform: mqtt
+  command_topic: ha/dash/on
+  state_topic: ha/dash/on
+  payload_on: 'active'
+  payload_off: 'inactive'
+
+- name: Philips Sonicare
+  platform: mqtt
+  command_topic: ha/dash/philips-sonicare
+  state_topic: ha/dash/philips-sonicare
+  payload_on: 'active'
+  payload_off: 'inactive'
 
 - name: Right Guard
   platform: mqtt
@@ -52,4 +48,3 @@
   state_topic: ha/dash/right-guard
   payload_on: 'active'
   payload_off: 'inactive'
-  retain: true
