party: heat up the ballroom and turn on media systems

--- a/scripts/party.yaml
+++ b/scripts/party.yaml
@@ -8,3 +8,23 @@ party_mode:
   - service: notify.automations
     data:
       message: "Party Mode activated"
+  - service: scene.turn_on
+    data:
+      entity_id: scene.ballroom_party
+  - service: media_player.turn_on
+    data:
+      entity_id: media_player.ballroom_amplifier
+  - delay:
+      seconds: 2
+  - service: media_player.select_source
+    data:
+      entity_id: media_player.ballroom_amplifier
+      source: Media
+  - service: media_player.volume_set
+    data:
+      entity_id: media_player.ballroom
+      volume_level: 0.9
+  - service: media_player.volume_set
+    data:
+      entity_id: media_player.ballroom_amplifier
+      volume_level: 0.5
