--- a/groups.yaml
+++ b/groups.yaml
@@ -610,6 +610,14 @@ user_automations:
   - automation.marks_bedroom_off_time
   - automation.reset_moods
   - automation.study_work_time
+  - automation.calendar_scene
+  - automation.calendar_climate
+  - automation.calendar_mark_scene
+  - automation.calendar_mark_climate
+  - automation.calendar_jerome_scene
+  - automation.calendar_jerome_climate
+  - automation.calendar_ros_scene
+  - automation.calendar_ros_climate
 
 #
 # Type Groups
