--- a/configuration.yaml
+++ b/configuration.yaml
@@ -78,6 +78,7 @@ tado:
 #emulated_hue: !include emulated_hue.yaml
 #
 notify: !include_dir_merge_list notify
+ios:
 tts: !include tts.yaml
 
 scene: !include_dir_merge_list scenes
