--- a/people/mark.yaml
+++ b/people/mark.yaml
@@ -2,4 +2,4 @@ name: "Mark"
 entities:
 - device_tracker.mark_phone
 - device_tracker.mark_android
-- device_tracker.omenmotog
+- device_tracker.omeng5
