--- a/automation/stream-radio.yaml
+++ b/automation/stream-radio.yaml
@@ -2,22 +2,22 @@
   trigger:
     - platform: state
       entity_id: input_select.study_stream
-      state:  None
+      to: None
     - platform: state
       entity_id: input_select.kitchen_stream
-      state:  None
+      to: None
     - platform: state
       entity_id: input_select.lounge_stream
-      state:  None
+      to: None
     - platform: state
       entity_id: input_select.library_stream
-      state:  None
+      to: None
     - platform: state
       entity_id: input_select.ballroom_stream
-      state:  None
+      to: None
     - platform: state
       entity_id: input_select.marks_bedroom_stream
-      state:  None
+      to: None
   action:
     - service: media_player.stop
       data_template:
@@ -27,22 +27,22 @@
   trigger:
     - platform: state
       entity_id: input_select.study_stream
-      state:  "Stream 1"
+      to: "Stream 1"
     - platform: state
       entity_id: input_select.kitchen_stream
-      state:  "Stream 1"
+      to: "Stream 1"
     - platform: state
       entity_id: input_select.lounge_stream
-      state:  "Stream 1"
+      to: "Stream 1"
     - platform: state
       entity_id: input_select.library_stream
-      state:  "Stream 1"
+      to: "Stream 1"
     - platform: state
       entity_id: input_select.ballroom_stream
-      state:  "Stream 1"
+      to: "Stream 1"
     - platform: state
       entity_id: input_select.marks_bedroom_stream
-      state:  "Stream 1"
+      to: "Stream 1"
   action:
     - service: media_player.play_media
       data_template:
@@ -67,22 +67,22 @@
   trigger:
     - platform: state
       entity_id: input_select.study_stream
-      state:  "Stream 2"
+      to: "Stream 2"
     - platform: state
       entity_id: input_select.kitchen_stream
-      state:  "Stream 2"
+      to: "Stream 2"
     - platform: state
       entity_id: input_select.lounge_stream
-      state:  "Stream 2"
+      to: "Stream 2"
     - platform: state
       entity_id: input_select.library_stream
-      state:  "Stream 2"
+      to: "Stream 2"
     - platform: state
       entity_id: input_select.ballroom_stream
-      state:  "Stream 2"
+      to: "Stream 2"
     - platform: state
       entity_id: input_select.marks_bedroom_stream
-      state:  "Stream 2"
+      to: "Stream 2"
   action:
     - service: media_player.play_media
       data_template:
@@ -107,22 +107,22 @@
   trigger:
     - platform: state
       entity_id: input_select.study_stream
-      state:  "Stream 3"
+      to: "Stream 3"
     - platform: state
       entity_id: input_select.kitchen_stream
-      state:  "Stream 3"
+      to: "Stream 3"
     - platform: state
       entity_id: input_select.lounge_stream
-      state:  "Stream 3"
+      to: "Stream 3"
     - platform: state
       entity_id: input_select.library_stream
-      state:  "Stream 3"
+      to: "Stream 3"
     - platform: state
       entity_id: input_select.ballroom_stream
-      state:  "Stream 3"
+      to: "Stream 3"
     - platform: state
       entity_id: input_select.marks_bedroom_stream
-      state:  "Stream 3"
+      to: "Stream 3"
   action:
     - service: media_player.play_media
       data_template:
