--- a/binary_sensors/washing-machine.yaml
+++ b/binary_sensors/washing-machine.yaml
@@ -1,6 +1,11 @@
+# Washing Machine UI entity (read-only)
+#
+# Triggered by automation.washing_machine_started
+# and automation.washing_machine_stopped
+#
 - name: washing_machine
   platform: mqtt
   state_topic: ha/event/washing-machine
-  device_class: heat
   payload_on: 'on'
   payload_off: 'off'
+  initial: off
