--- a/groups.yaml
+++ b/groups.yaml
@@ -465,6 +465,7 @@ hottub:
   name: Hot Tub
   icon: mdi:pot
   entities:
+  - binary_sensor.hottub
   - switch.greenwave_powernode_1_port_switch_53_0
   - sensor.greenwave_powernode_1_port_energy_53_0
   - sensor.greenwave_powernode_1_port_power_53_8
@@ -771,10 +772,10 @@ virtual_appliances:
   name: Virtual Appliances
   view: false
   entities:
-  - input_boolean.washing_machine
-  - input_boolean.washing_machine_debounce
-  - input_boolean.hottub
-  - input_boolean.hottub_debounce
+  - input_boolean.washing_machine_debouncer
+  - binary_sensor.washing_machine
+  - input_boolean.hottub_debouncer
+  - binary_sensor.hottub
 
 #
 # Presence Groups
