--- a/history.yaml
+++ b/history.yaml
@@ -6,6 +6,8 @@ exclude:
     - device_tracker
   entities:
     - sun.sun   # Don't record sun data
+    - input_boolean.washing_machine_debouncer
+    - input_boolean.hottub_debouncer
 include:
   domains:
     - ups
