--- a/logbook.yaml
+++ b/logbook.yaml
@@ -4,6 +4,9 @@ exclude:
     - updater
     - device_tracker
     - zwave
+  entities:
+    - input_boolean.washing_machine_debouncer
+    - input_boolean.hottub_debouncer
 include:
   domains:
     - automation
