notify: notify whalebarn instead of automations in a few cases

--- a/automation/calendar.yaml
+++ b/automation/calendar.yaml
@@ -84,7 +84,7 @@
         payload: >
           {% set l = trigger.to_state.attributes.message.split(": ")|last %}
           {{l}}
-    - service: notify.automations
+    - service: notify.whalebarn
       data_template:
         message: >
           {% set l = trigger.to_state.attributes.message.split(": ")|last %}
