--- a/scripts/tabletennis.yaml
+++ b/scripts/tabletennis.yaml
@@ -4,7 +4,7 @@ table_tennis:
     data_template:
       topic: 'ha/event/table-tennis'
       payload: "It's TABLE TENNIS time!"
-  - service: notify.automations
+  - service: notify.whalebarn
     data:
       message: "Table Tennis Mode activated"
   - service: tts.google_say
