zwave: rename Main Heating Thermostat

--- a/sensors/batteries.yaml
+++ b/sensors/batteries.yaml
@@ -2,8 +2,8 @@
   sensors:
     main_heating_thermostat_battery:
       value_template: >
-        {% if states.zwave.horstmann_scsc17_thermostat_35 %}
-          {{ states.zwave.horstmann_scsc17_thermostat_35.attributes.battery_level }}
+        {% if states.zwave.main_heating_thermostat %}
+          {{ states.zwave.main_heating_thermostat.attributes.battery_level }}
         {% else %}
           unknown
         {% endif %}
