--- a/customize.yaml
+++ b/customize.yaml
@@ -99,13 +99,10 @@ sensor.aeotec_dsb05_multisensor_temperature_3_1:
   friendly_name: Hall
 binary_sensor.aeotec_dsb05_multisensor_sensor_3_0:
   friendly_name: Hall Motion
-light.__level_40_0:
-  friendly_name: Unused Dimmer
-light.ballroom_north_level_41_0:
-  friendly_name: Ballroom North
-  polling_intensity: 0
-light.unused41_level_41_0:
-  friendly_name: Ballroom North_
+light.unused_40_level:
+  friendly_name: Unused Dimmer 40
+light.unused_41_level:
+  friendly_name: Unused Dimmer 41
   polling_intensity: 0
 light.bedroom_mark_overhead_level:
   friendly_name: "Mark's Bedroom Overhead"
