--- a/lights/mock_lights.yaml
+++ b/lights/mock_lights.yaml
@@ -70,14 +70,22 @@
   payload_off: 'OFF'
   payload_on: 'ON'
   platform: mqtt
-- brightness_command_topic: ha/mock/ballroom/north/brightness/command
+- name: unused_40_level
+  platform: mqtt
+  command_topic: ha/mock/unused_40/dimmer/command
+  brightness_command_topic: ha/mock/unused_40/brightness/command
   brightness_scale: 100
-  command_topic: ha/mock/ballroom/north/dimmer/command
-  name: ballroom_north_level_41_0
   optimistic: true
   payload_off: 'OFF'
   payload_on: 'ON'
+- name: unused_41_level
   platform: mqtt
+  command_topic: ha/mock/unused_41/dimmer/command
+  brightness_command_topic: ha/mock/unused_41/brightness/command
+  brightness_scale: 100
+  optimistic: true
+  payload_off: 'OFF'
+  payload_on: 'ON'
 - command_topic: ha/mock/library/level/command
   name: library_level_25_0
   optimistic: true
